BUG FIX: Accessibility update (color contrast) for Posts in Sequence metabox

--- a/css/e20r_sequences.css
+++ b/css/e20r_sequences.css
@@ -370,15 +370,15 @@ span.page-numbers {
 
 /* Link hover state */
 a:hover.page-numbers {
-    color: #000;
-    color: hsl(0, 0%, 0%);
+    color: #333;
+    color: hsl(0, 0%, 20%);
 }
 
 /* Current page bold and dark */
 .paging-navigation .current {
     font-weight: bold;
-    color: #000;
-    color: hsl(0, 0%, 0%);
+    color: #333;
+    color: hsl(0, 0%, 20%);
 }
 
 #e20r-seq-post-list {
@@ -669,7 +669,7 @@ table#e20r_sequencetable tbody tr:nth-of-type(2n) {
 table#e20r_sequencetable th {
     background-color: #d5d5d5;
     font-weight: bold;
-    color: #fff;
+    color: #333;
 }
 
 table#e20r_sequencetable tbody tr td:nth-of-type(1) {
